--- a/LinearRegression4_WineQuality.ipynb
+++ b/LinearRegression4_WineQuality.ipynb
@@ -4,9 +4,9 @@
   "metadata": {
     "colab": {
       "name": "LinearRegression4:WineQuality.ipynb",
-      "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMtMehqZg/akvBMewvKMuy2",
+      "provenance": [],
+      "authorship_tag": "ABX9TyPU/mNx1gbOs1u1Adyq2QKg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,24 +29,20 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UuorcVFPcr04",
-        "colab_type": "code",
-        "colab": {}
+        "id": "UuorcVFPcr04"
       },
       "source": [
         "# Clone the entire repo.\n",
         "!git clone -l -s https://github.com/cagBRT/Machine-Learning.git cloned-repo\n",
-        "%cd cloned-repo\n",
-        "!ls"
+        "%cd cloned-repo"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ul2doUVQIwXr",
-        "colab_type": "text"
+        "id": "ul2doUVQIwXr"
       },
       "source": [
         "# **Can the quality of wine be predicted from its measureable characteristics?**"
@@ -55,8 +51,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "RTfR8FLpO8vQ",
-        "colab_type": "text"
+        "id": "RTfR8FLpO8vQ"
       },
       "source": [
         "**Fixed acidity**: acids are major wine properties and contribute greatly to the wine’s taste. Usually, the total acidity is divided into two groups: the volatile acids and the nonvolatile or fixed acids. Among the fixed acids that you can find in wines are the following: tartaric, malic, citric, and succinic. This variable is expressed in g(tartaricacid)/dm3 in the data sets.<br>\n",
@@ -76,8 +71,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "B_SyJzX6OjgM",
-        "colab_type": "text"
+        "id": "B_SyJzX6OjgM"
       },
       "source": [
         "# **Load the libraries**"
@@ -86,9 +80,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yT-tH6kSE_V1",
-        "colab_type": "code",
-        "colab": {}
+        "id": "yT-tH6kSE_V1"
       },
       "source": [
         "from __future__ import absolute_import, division, print_function, unicode_literals\n",
@@ -116,14 +108,13 @@
         "\n",
         "print(tf.__version__)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "9aWDRwFGOnjE",
-        "colab_type": "text"
+        "id": "9aWDRwFGOnjE"
       },
       "source": [
         "# **Load the data**\n",
@@ -134,9 +125,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-DaKr4tTFZb3",
-        "colab_type": "code",
-        "colab": {}
+        "id": "-DaKr4tTFZb3"
       },
       "source": [
         "# Read in white wine data \n",
@@ -145,27 +134,24 @@
         "\n",
         "wines = pd.read_csv(\"winequality-red.csv\", sep=';')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8Eun_foKFq7V",
-        "colab_type": "code",
-        "colab": {}
+        "id": "8Eun_foKFq7V"
       },
       "source": [
         "wines.tail()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "qiTSR74sO_sS",
-        "colab_type": "text"
+        "id": "qiTSR74sO_sS"
       },
       "source": [
         "# **Check out the distribution of the type of wines**"
@@ -174,36 +160,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8e4fGVfT7avb",
-        "colab_type": "code",
-        "colab": {}
+        "id": "8e4fGVfT7avb"
       },
       "source": [
         "wines['quality'].value_counts()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MiVtKz5AYR4b",
-        "colab_type": "code",
-        "colab": {}
+        "id": "MiVtKz5AYR4b"
       },
       "source": [
         "plt.figure(figsize=(15,10))\n",
         "plt.tight_layout()\n",
         "sns.distplot(wines['quality'])"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "xBbo1BJIPG04",
-        "colab_type": "text"
+        "id": "xBbo1BJIPG04"
       },
       "source": [
         "# **Check for missing data in wines**"
@@ -212,21 +193,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8Oe8kyVIHyrH",
-        "colab_type": "code",
-        "colab": {}
+        "id": "8Oe8kyVIHyrH"
       },
       "source": [
         "wines.isna().sum()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "vUrhO4ncPLS2",
-        "colab_type": "text"
+        "id": "vUrhO4ncPLS2"
       },
       "source": [
         "# **Is there a strong correlation between any of the features?**\n",
@@ -237,9 +215,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9hMYRhmaGgnv",
-        "colab_type": "code",
-        "colab": {}
+        "id": "9hMYRhmaGgnv"
       },
       "source": [
         "corr = wines.corr()\n",
@@ -248,14 +224,13 @@
         "            yticklabels=corr.columns.values)\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "yNfi7Xh3PtSa",
-        "colab_type": "text"
+        "id": "yNfi7Xh3PtSa"
       },
       "source": [
         "# **Split the dataset into a training set and a test set**\n",
@@ -265,9 +240,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "usMnFS-mH5sf",
-        "colab_type": "code",
-        "colab": {}
+        "id": "usMnFS-mH5sf"
       },
       "source": [
         "#Consider changing the ratio of the train/test split\n",
@@ -276,27 +249,36 @@
         "wines_test = wines.drop(wines_train.index)\n",
         "print(\"done\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "H1rxVuiQLeV-",
-        "colab_type": "code",
-        "colab": {}
+        "id": "5EKkF2SxH0WM"
+      },
+      "source": [
+        "print(\"Training shape:\",wines_train.shape)\n",
+        "print(\"Test shape:\",wines_test.shape)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "H1rxVuiQLeV-"
       },
       "source": [
         "wines_train"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "J_XshQkuPd5b",
-        "colab_type": "text"
+        "id": "J_XshQkuPd5b"
       },
       "source": [
         "# **Remove the labels from the dataset**"
@@ -305,65 +287,56 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mZgwjudzJGTT",
-        "colab_type": "code",
-        "colab": {}
+        "id": "mZgwjudzJGTT"
       },
       "source": [
         "train_labels = wines_train.pop('quality')\n",
         "test_labels = wines_test.pop('quality')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ei8uCJ3zyrKT",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Ei8uCJ3zyrKT"
       },
       "source": [
         "wines_train"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab_type": "code",
-        "id": "ZOf2VECnxmIj",
-        "colab": {}
+        "id": "ZOf2VECnxmIj"
       },
       "source": [
         "train_stats = wines_train.describe()\n",
         "train_stats = train_stats.transpose()\n",
         "train_stats"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aX1uBIHs3kH1",
-        "colab_type": "code",
-        "colab": {}
+        "id": "aX1uBIHs3kH1"
       },
       "source": [
         "test_stats = wines_test.describe()\n",
         "test_stats = test_stats.transpose()\n",
         "test_stats"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "-OZ852UxQSRy",
-        "colab_type": "text"
+        "id": "-OZ852UxQSRy"
       },
       "source": [
         "# **Normalize the data**"
@@ -372,9 +345,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qUSR2qiZJXZ4",
-        "colab_type": "code",
-        "colab": {}
+        "id": "qUSR2qiZJXZ4"
       },
       "source": [
         "def norm(x):\n",
@@ -384,14 +355,13 @@
         "normed_test_data = norm(wines_test)\n",
         "print(\"done\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6EeJRG1pYm6B",
-        "colab_type": "text"
+        "id": "6EeJRG1pYm6B"
       },
       "source": [
         "# **Use the skLearn Linear Regression Model**\n"
@@ -400,22 +370,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "O3hI7CNTYuVh",
-        "colab_type": "code",
-        "colab": {}
+        "id": "O3hI7CNTYuVh"
       },
       "source": [
         "regressor = LinearRegression()  \n",
         "regressor.fit(wines_train, train_labels)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "v8OQ1hZ8Igc2"
+      },
+      "source": [
+        "print(regressor.score(wines_test, test_labels))"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "aJVDAm_sZVxF",
-        "colab_type": "text"
+        "id": "aJVDAm_sZVxF"
       },
       "source": [
         "The regression model has to find the most optimal coefficients for all the attributes. To see what coefficients the regression model has chosen:"
@@ -424,22 +402,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2XA-P1X7ZavP",
-        "colab_type": "code",
-        "colab": {}
+        "id": "2XA-P1X7ZavP"
       },
       "source": [
         "coeff_df = pd.DataFrame(regressor.coef_, wines_train.columns, columns=['Coefficient'])  \n",
         "coeff_df"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "aUBDK5s0Z4o8",
-        "colab_type": "text"
+        "id": "aUBDK5s0Z4o8"
       },
       "source": [
         "This means that for a unit increase in “density”, there is a decrease of 31.51 units in the quality of the wine. Similarly, a unit decrease in “Chlorides“ results in an increase of 1.87 units in the quality of the wine. We can see that the rest of the features have very little effect on the quality of the wine."
@@ -448,36 +423,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DI92yQ5tZ5jv",
-        "colab_type": "code",
-        "colab": {}
+        "id": "DI92yQ5tZ5jv"
       },
       "source": [
         "y_pred = regressor.predict(wines_test)\n",
         "y_pred.shape"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qQkGrl2Zbewx",
-        "colab_type": "code",
-        "colab": {}
+        "id": "qQkGrl2Zbewx"
       },
       "source": [
-        "test_labels\n",
         "test_labels"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "g_1kjIVMaDS9",
-        "colab_type": "text"
+        "id": "g_1kjIVMaDS9"
       },
       "source": [
         "**Check the difference between the actual and predicted value**"
@@ -486,22 +455,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "OuVpsNhRaDbv",
-        "colab_type": "code",
-        "colab": {}
+        "id": "OuVpsNhRaDbv"
       },
       "source": [
         "df1 = pd.DataFrame({'Actual': test_labels, 'Predicted': y_pred})\n",
         "df1"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "JKyH7ouxayFN",
-        "colab_type": "text"
+        "id": "JKyH7ouxayFN"
       },
       "source": [
         "**Plot the actual and predicted values**"
@@ -510,37 +476,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FWGtS2frayOg",
-        "colab_type": "code",
-        "colab": {}
+        "id": "FWGtS2frayOg"
       },
       "source": [
         "df1.plot(kind='bar',figsize=(15,8))\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "M-IliI3ZcPrF",
-        "colab_type": "code",
-        "colab": {}
+        "id": "M-IliI3ZcPrF"
       },
       "source": [
         "print('Mean Absolute Error:', metrics.mean_absolute_error(test_labels, y_pred))  \n",
         "print('Mean Squared Error:', metrics.mean_squared_error(test_labels, y_pred))  \n",
         "print('Root Mean Squared Error:', np.sqrt(metrics.mean_squared_error(test_labels, y_pred)))\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "zeAhf34zdA8e",
-        "colab_type": "text"
+        "id": "zeAhf34zdA8e"
       },
       "source": [
         "**Need more data**: We need to have a huge amount of data to get the best possible prediction.<br>\n",
@@ -551,8 +512,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "RcGrpIYHVV6Z",
-        "colab_type": "text"
+        "id": "RcGrpIYHVV6Z"
       },
       "source": [
         "# **Assignment** <br>\n",
@@ -562,9 +522,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "u6lU6ts5VtE_",
-        "colab_type": "code",
-        "colab": {}
+        "id": "u6lU6ts5VtE_"
       },
       "source": [
         "corr = wines.corr()\n",
@@ -573,41 +531,35 @@
         "            yticklabels=corr.columns.values)\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "73RLqc4LV_QQ",
-        "colab_type": "code",
-        "colab": {}
+        "id": "73RLqc4LV_QQ"
       },
       "source": [
         "wines.columns"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Df1X0s_bWDUn",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Df1X0s_bWDUn"
       },
       "source": [
         "wines.pop('the column you want to remove')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JaS9nXQVV_u7",
-        "colab_type": "code",
-        "colab": {}
+        "id": "JaS9nXQVV_u7"
       },
       "source": [
         "#Consider changing the ratio of the train/test split\n",
@@ -616,29 +568,25 @@
         "wines_test = wines.drop(wines_train.index)\n",
         "print(\"done\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mxFZ3wbhWdbW",
-        "colab_type": "code",
-        "colab": {}
+        "id": "mxFZ3wbhWdbW"
       },
       "source": [
         "train_labels = wines_train.pop('quality')\n",
         "test_labels = wines_test.pop('quality')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UNoXn4U4WsAp",
-        "colab_type": "code",
-        "colab": {}
+        "id": "UNoXn4U4WsAp"
       },
       "source": [
         "def norm(x):\n",
@@ -648,78 +596,68 @@
         "normed_test_data = norm(wines_test)\n",
         "print(\"done\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "65JFKNeoWxKq",
-        "colab_type": "code",
-        "colab": {}
+        "id": "65JFKNeoWxKq"
       },
       "source": [
         "regressor = LinearRegression()  \n",
         "regressor.fit(wines_train, train_labels)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Hd9562TmWyL3",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Hd9562TmWyL3"
       },
       "source": [
         "coeff_df = pd.DataFrame(regressor.coef_, wines_train.columns, columns=['Coefficient'])  \n",
         "coeff_df"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kpl1zqKRW2mj",
-        "colab_type": "code",
-        "colab": {}
+        "id": "kpl1zqKRW2mj"
       },
       "source": [
         "df1 = pd.DataFrame({'Actual': test_labels, 'Predicted': y_pred})\n",
         "df1"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "R_WzyZItW2qq",
-        "colab_type": "code",
-        "colab": {}
+        "id": "R_WzyZItW2qq"
       },
       "source": [
         "df1.plot(kind='bar',figsize=(15,8))\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9peTqxzZW_qi",
-        "colab_type": "code",
-        "colab": {}
+        "id": "9peTqxzZW_qi"
       },
       "source": [
         "print('Mean Absolute Error:', metrics.mean_absolute_error(test_labels, y_pred))  \n",
         "print('Mean Squared Error:', metrics.mean_squared_error(test_labels, y_pred))  \n",
         "print('Root Mean Squared Error:', np.sqrt(metrics.mean_squared_error(test_labels, y_pred)))\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     }
   ]
