--- a/LinearRegression1.ipynb
+++ b/LinearRegression1.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOdG61HJRsxUwpHLIkkgOi+",
+      "authorship_tag": "ABX9TyNEcK0j0HHnUyyQCOGrteuG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,6 +52,8 @@
       "source": [
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
+        "from sklearn.datasets import make_regression\n",
+        "from sklearn.model_selection import train_test_split\n",
         "from sklearn.linear_model import LinearRegression"
       ],
       "execution_count": null,
@@ -69,11 +71,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4X_7Z2fnXYNd"
+        "id": "5edad6a1WEMI"
       },
       "source": [
-        "X_train = np.array([[1, 1],[2, 3],[3, 2],[4, 4],[8,10],[1.5,2.4],[5,6],[5,7],[1,3],[10,8],[1,4]])\n",
-        "y_train = np.array([1,3,7,6,9,7,5,10,2,11,6])"
+        "X,y = make_regression(n_samples=1000, n_features=2, random_state=1, noise=0.1,bias=3.5)\n",
+        "#X_train\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)\n",
+        "X_train.shape"
       ],
       "execution_count": null,
       "outputs": []
@@ -84,7 +88,7 @@
         "id": "ShS2QjXqFT2N"
       },
       "source": [
-        "**Plot the data**<br>\n"
+        "**Plot the training data**<br>\n"
       ]
     },
     {
@@ -146,7 +150,7 @@
         "print(reg.coef_)\n",
         "print(reg.intercept_)\n",
         "print(reg.predict(np.array([[3, 5]])))\n",
-        "print(reg.score(X_train, y_train))"
+        "print(reg.score(X_test, y_test))"
       ],
       "execution_count": null,
       "outputs": []
@@ -154,27 +158,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "95okXkLk7EIX"
+        "id": "GM1DGKvnea-S"
       },
       "source": [
-        "**A helper function to plot the line **"
+        "**Make predictions with the trained model**<br>\n",
+        "Use the test data to make predictions with the trained model"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "mi-dY-wm6zTq"
-      },
-      "source": [
-        "def abline(slope, intercept):\n",
-        "    \"\"\"Plot a line from slope and intercept\"\"\"\n",
-        "    #axes = plt.gca()\n",
-        "    x_vals = np.array(axes.get_xlim())\n",
-        "    y_vals = intercept + slope * x_vals\n",
-        "    plt.plot(x_vals, y_vals, '--')"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -182,22 +171,19 @@
         "id": "r6g9OZYMdEXH"
       },
       "source": [
-        "x_pred = np.array([[1,2],[10,10]])\n",
-        "y_pred = reg.predict(np.array(x_pred))"
+        "y_pred = reg.predict(np.array(X_test))"
       ],
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "oKPO6wFm-Mw4"
+        "id": "H8gXvzKLerBQ"
       },
       "source": [
-        "print(y_pred)"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "**Plot the test values and the predictions**"
+      ]
     },
     {
       "cell_type": "code",
@@ -205,13 +191,8 @@
         "id": "sw2BI2LyacmR"
       },
       "source": [
-        "plt.scatter(xplot,yplot,  color='gray')\n",
-        "plt.scatter(xpred, ypred, color='red', linewidth=2)\n",
-        "\n",
-        "x_vals = np.array(axes.get_xlim())\n",
-        "y_vals = reg.intercept_+ reg.coef_ * x_vals\n",
-        "plt.plot(x_vals, y_vals, '--')\n",
-        "\n",
+        "plt.plot(x_vals,y_vals)\n",
+        "plt.scatter(X_test[:,0],y_pred, color='blue')\n",
         "plt.show()"
       ],
       "execution_count": null,
