--- a/LinearRegression1.ipynb
+++ b/LinearRegression1.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNEcK0j0HHnUyyQCOGrteuG",
+      "authorship_tag": "ABX9TyPdlOviXFxzCyCeVKukt4Dg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,8 @@
       },
       "source": [
         "**Import Libraries**<br>\n",
-        "Note: Linear Regression library"
+        "Note: Linear Regression library and make_regression<br>\n",
+        "The make_regression library is used to create synthetic data"
       ]
     },
     {
@@ -53,6 +54,7 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "from sklearn.datasets import make_regression\n",
+        "from sklearn.preprocessing import Normalizer\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.linear_model import LinearRegression"
       ],
@@ -74,7 +76,7 @@
         "id": "5edad6a1WEMI"
       },
       "source": [
-        "X,y = make_regression(n_samples=1000, n_features=2, random_state=1, noise=0.1,bias=3.5)\n",
+        "X,y = make_regression(n_samples=800, n_features=2, random_state=1, noise=0.1,bias=3.5)\n",
         "#X_train\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)\n",
         "X_train.shape"
@@ -97,9 +99,10 @@
         "id": "zxjXumXhXhFU"
       },
       "source": [
-        "xplot, yplot = X_train.T\n",
-        "plt.scatter(xplot,yplot)\n",
-        "#plt.scatter(xplot, y_train, color='red')\n",
+        "plt.scatter(X[:,0],X[:,1])\n",
+        "plt.title('Training data')  \n",
+        "plt.xlabel('X')  \n",
+        "plt.ylabel('y') \n",
         "plt.show()"
       ],
       "execution_count": null,
