--- a/LinearRegression1.ipynb
+++ b/LinearRegression1.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPdlOviXFxzCyCeVKukt4Dg",
+      "authorship_tag": "ABX9TyP6G1VxW1VWfd+awHaVNVKm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,7 +76,7 @@
         "id": "5edad6a1WEMI"
       },
       "source": [
-        "X,y = make_regression(n_samples=800, n_features=2, random_state=1, noise=0.1,bias=3.5)\n",
+        "X,y = make_regression(n_samples=800, n_features=2, random_state=1, noise=0.9,bias=3.5)\n",
         "#X_train\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)\n",
         "X_train.shape"
@@ -99,8 +99,23 @@
         "id": "zxjXumXhXhFU"
       },
       "source": [
-        "plt.scatter(X[:,0],X[:,1])\n",
+        "plt.scatter(X_train[:,0],y_train)\n",
         "plt.title('Training data')  \n",
+        "plt.xlabel('X')  \n",
+        "plt.ylabel('y') \n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "youxcnUumb6N"
+      },
+      "source": [
+        "plt.scatter(X_test[:,0],y_test)\n",
+        "plt.title('Test data')  \n",
         "plt.xlabel('X')  \n",
         "plt.ylabel('y') \n",
         "plt.show()"
@@ -152,7 +167,7 @@
       "source": [
         "print(reg.coef_)\n",
         "print(reg.intercept_)\n",
-        "print(reg.predict(np.array([[3, 5]])))\n",
+        "#print(reg.predict(X_test))\n",
         "print(reg.score(X_test, y_test))"
       ],
       "execution_count": null,
