--- a/LinearRegression1.ipynb
+++ b/LinearRegression1.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyP6G1VxW1VWfd+awHaVNVKm",
+      "authorship_tag": "ABX9TyNfPdFJaRE3zU0C03fwUY74",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,7 +67,8 @@
         "id": "-KvRhT-n3ign"
       },
       "source": [
-        "**Create some synthetic data**"
+        "**Create some synthetic data**<br>\n",
+        "This synthetic data is designed for linear regression models, so we expect a high accuracy score"
       ]
     },
     {
