--- a/LinearRegression2.ipynb
+++ b/LinearRegression2.ipynb
@@ -4,9 +4,9 @@
   "metadata": {
     "colab": {
       "name": "LinearRegression2.ipynb",
-      "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOUouY6aEnZLZ09/EgEfLcQ",
+      "provenance": [],
+      "authorship_tag": "ABX9TyNszzX0ZudszJDQF47h4+QH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,28 +26,77 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BBGFq5o1urWZ"
+      },
+      "source": [
+        "**Import the required libraries**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "NzsMVHAiJA4t",
-        "colab_type": "code",
-        "colab": {}
+        "id": "NzsMVHAiJA4t"
       },
       "source": [
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "from sklearn.linear_model import LinearRegression\n",
         "from sklearn import datasets, linear_model\n",
+        "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import mean_squared_error, r2_score"
       ],
-      "execution_count": 0,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PAXfk-nGuviW"
+      },
+      "source": [
+        "Load the dataset<br>\n",
+        "This is a real dataset from the sklearn library"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ygxKScsku3Pt"
+      },
+      "source": [
+        "diabetes = load_diabetes()"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WZgqQ5yeQTbZ",
-        "colab_type": "code",
-        "colab": {}
+        "id": "9d7318E5u-5l"
+      },
+      "source": [
+        "diabetes.DESCR"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CA-1bTVzu7Vi"
+      },
+      "source": [
+        "diabetes.feature_names"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WZgqQ5yeQTbZ"
       },
       "source": [
         "# Load the diabetes dataset\n",
@@ -56,50 +105,41 @@
         "# Use only one feature\n",
         "diabetes_X = diabetes_X[:, np.newaxis, 2]\n",
         "\n",
-        "# Split the data into training/testing sets\n",
-        "diabetes_X_train = diabetes_X[:-20]\n",
-        "diabetes_X_test = diabetes_X[-20:]\n",
-        "\n",
-        "# Split the targets into training/testing sets\n",
-        "diabetes_y_train = diabetes_y[:-20]\n",
-        "diabetes_y_test = diabetes_y[-20:]"
+        "X_train, X_test, y_train, y_test = train_test_split(diabetes_X, diabetes_y, test_size=0.2, random_state=0)\n",
+        "X_train.shape\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GYE7XgvcQ35h",
-        "colab_type": "code",
-        "colab": {}
+        "id": "GYE7XgvcQ35h"
       },
       "source": [
-        "diabetes_X.shape"
+        "print(diabetes_X.shape)\n",
+        "print(X_train.shape)\n",
+        "print(y_train.shape)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "W5pYa8-hRCWV",
-        "colab_type": "code",
-        "colab": {}
+        "id": "W5pYa8-hRCWV"
       },
       "source": [
         "# Create linear regression object\n",
         "regr = linear_model.LinearRegression()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xyOQBytXQgcr",
-        "colab_type": "code",
-        "colab": {}
+        "id": "xyOQBytXQgcr"
       },
       "source": [
         "# Train the model using the training sets\n",
@@ -108,15 +148,13 @@
         "# Make predictions using the testing set\n",
         "diabetes_y_pred = regr.predict(diabetes_X_test)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pPXNcgLtP04d",
-        "colab_type": "code",
-        "colab": {}
+        "id": "pPXNcgLtP04d"
       },
       "source": [
         "# The coefficients\n",
@@ -128,14 +166,13 @@
         "print('Coefficient of determination: %.2f'\n",
         "      % r2_score(diabetes_y_test, diabetes_y_pred))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "1t7CaPtFILSs",
-        "colab_type": "text"
+        "id": "1t7CaPtFILSs"
       },
       "source": [
         "add labels to plot"
@@ -144,9 +181,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Qv5GQcEIQj3x",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Qv5GQcEIQj3x"
       },
       "source": [
         "# Plot outputs\n",
@@ -158,7 +193,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     }
   ]
