--- a/LinearRegression2.ipynb
+++ b/LinearRegression2.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression2.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNszzX0ZudszJDQF47h4+QH",
+      "authorship_tag": "ABX9TyNTjRuN4egfIfpx8Evnj+XZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
         "id": "PAXfk-nGuviW"
       },
       "source": [
-        "Load the dataset<br>\n",
+        "**Load the dataset**<br>\n",
         "This is a real dataset from the sklearn library"
       ]
     },
@@ -105,6 +105,7 @@
         "# Use only one feature\n",
         "diabetes_X = diabetes_X[:, np.newaxis, 2]\n",
         "\n",
+        "#split into train and test datasets\n",
         "X_train, X_test, y_train, y_test = train_test_split(diabetes_X, diabetes_y, test_size=0.2, random_state=0)\n",
         "X_train.shape\n"
       ],
@@ -158,7 +159,8 @@
       },
       "source": [
         "# The coefficients\n",
-        "print('Coefficients: \\n', regr.coef_)\n",
+        "print('Coefficients: ', regr.coef_)\n",
+        "print('Intercept: ', regr.intercept_)\n",
         "# The mean squared error\n",
         "print('Mean squared error: %.2f'\n",
         "      % mean_squared_error(diabetes_y_test, diabetes_y_pred))\n",
