--- a/LinearRegression2.ipynb
+++ b/LinearRegression2.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression2.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNTjRuN4egfIfpx8Evnj+XZ",
+      "authorship_tag": "ABX9TyN4pw4GzDtbyVpAh6rSSf/F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -126,6 +126,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MhXNDzwovfbH"
+      },
+      "source": [
+        "**Create and train the model**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "W5pYa8-hRCWV"
@@ -144,8 +153,26 @@
       },
       "source": [
         "# Train the model using the training sets\n",
-        "regr.fit(diabetes_X_train, diabetes_y_train)\n",
-        "\n",
+        "regr.fit(diabetes_X_train, diabetes_y_train)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dtHLb1fEvljy"
+      },
+      "source": [
+        "**Test the model** "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JJ3MZpEsvlu0"
+      },
+      "source": [
         "# Make predictions using the testing set\n",
         "diabetes_y_pred = regr.predict(diabetes_X_test)"
       ],
@@ -177,7 +204,7 @@
         "id": "1t7CaPtFILSs"
       },
       "source": [
-        "add labels to plot"
+        "**Plot the line and the test data**"
       ]
     },
     {
