--- a/LinearRegression2.ipynb
+++ b/LinearRegression2.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression2.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyN4pw4GzDtbyVpAh6rSSf/F",
+      "authorship_tag": "ABX9TyMYB+0U2fEDkPKep8+HahYX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -103,7 +103,7 @@
         "diabetes_X, diabetes_y = datasets.load_diabetes(return_X_y=True)\n",
         "\n",
         "# Use only one feature\n",
-        "diabetes_X = diabetes_X[:, np.newaxis, 2]\n",
+        "diabetes_X = diabetes_X[:, np.newaxis, 5]\n",
         "\n",
         "#split into train and test datasets\n",
         "X_train, X_test, y_train, y_test = train_test_split(diabetes_X, diabetes_y, test_size=0.2, random_state=0)\n",
@@ -120,7 +120,7 @@
       "source": [
         "print(diabetes_X.shape)\n",
         "print(X_train.shape)\n",
-        "print(y_train.shape)"
+        "print(X_test.shape)"
       ],
       "execution_count": null,
       "outputs": []
