--- a/LinearRegression2.ipynb
+++ b/LinearRegression2.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression2.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMYB+0U2fEDkPKep8+HahYX",
+      "authorship_tag": "ABX9TyMpyo3QIoAvdUC8FBsOSp6y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -153,7 +153,7 @@
       },
       "source": [
         "# Train the model using the training sets\n",
-        "regr.fit(diabetes_X_train, diabetes_y_train)"
+        "regr.fit(X_train, y_train)"
       ],
       "execution_count": null,
       "outputs": []
@@ -174,7 +174,7 @@
       },
       "source": [
         "# Make predictions using the testing set\n",
-        "diabetes_y_pred = regr.predict(diabetes_X_test)"
+        "y_pred = regr.predict(X_test)"
       ],
       "execution_count": null,
       "outputs": []
@@ -190,10 +190,9 @@
         "print('Intercept: ', regr.intercept_)\n",
         "# The mean squared error\n",
         "print('Mean squared error: %.2f'\n",
-        "      % mean_squared_error(diabetes_y_test, diabetes_y_pred))\n",
+        "      % mean_squared_error(y_test, y_pred))\n",
         "# The coefficient of determination: 1 is perfect prediction\n",
-        "print('Coefficient of determination: %.2f'\n",
-        "      % r2_score(diabetes_y_test, diabetes_y_pred))"
+        "print('Score: ',regr.score(X_test, y_pred))"
       ],
       "execution_count": null,
       "outputs": []
