--- a/LinearRegression2.ipynb
+++ b/LinearRegression2.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression2.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMpyo3QIoAvdUC8FBsOSp6y",
+      "authorship_tag": "ABX9TyOZ7OfPoDOPyhkJ76OgkvCH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -103,7 +103,7 @@
         "diabetes_X, diabetes_y = datasets.load_diabetes(return_X_y=True)\n",
         "\n",
         "# Use only one feature\n",
-        "diabetes_X = diabetes_X[:, np.newaxis, 5]\n",
+        "diabetes_X = diabetes_X[:, np.newaxis, 1]\n",
         "\n",
         "#split into train and test datasets\n",
         "X_train, X_test, y_train, y_test = train_test_split(diabetes_X, diabetes_y, test_size=0.2, random_state=0)\n",
@@ -192,7 +192,7 @@
         "print('Mean squared error: %.2f'\n",
         "      % mean_squared_error(y_test, y_pred))\n",
         "# The coefficient of determination: 1 is perfect prediction\n",
-        "print('Score: ',regr.score(X_test, y_pred))"
+        "print('Score: ',regr.score(X_test, y_test))"
       ],
       "execution_count": null,
       "outputs": []
