--- a/LinearRegression3.ipynb
+++ b/LinearRegression3.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression3.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNqdmuuQL4sq9VpXwEQTowt",
+      "authorship_tag": "ABX9TyPGJGGU7zi4WPa5UXAaRoCo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,8 +33,7 @@
       "source": [
         "# Clone the entire repo.\n",
         "!git clone -l -s https://github.com/cagBRT/Machine-Learning.git cloned-repo\n",
-        "%cd cloned-repo\n",
-        "!ls"
+        "%cd cloned-repo"
       ],
       "execution_count": null,
       "outputs": []
