--- a/LinearRegression1.ipynb
+++ b/LinearRegression1.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNfPdFJaRE3zU0C03fwUY74",
+      "authorship_tag": "ABX9TyOKYzdxqDfTH9eK/Wyjdyhq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -210,7 +210,10 @@
         "id": "sw2BI2LyacmR"
       },
       "source": [
-        "plt.plot(x_vals,y_vals)\n",
+        "axes = plt.gca()\n",
+        "x_vals = (-3,3)\n",
+        "y_vals = reg.intercept_ + reg.coef_ * x_vals\n",
+        "plt.plot(x_vals, y_vals, color='red')\n",
         "plt.scatter(X_test[:,0],y_pred, color='blue')\n",
         "plt.show()"
       ],
