--- a/LinearRegression1.ipynb
+++ b/LinearRegression1.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyN3jBm+Qdcmc3bDkPkyzvvN",
+      "authorship_tag": "ABX9TyNu+l544GVa+myOkLSOUgt+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -213,7 +213,7 @@
         "x_vals = (-3,3)\n",
         "y_vals = reg.intercept_ + reg.coef_ * x_vals\n",
         "plt.plot(x_vals, y_vals, color='red')\n",
-        "plt.scatter(X_test[:,0],y_pred, color='blue')\n",
+        "plt.scatter(X_test[:,0],y_test, color='blue')\n",
         "plt.show()"
       ],
       "execution_count": null,
