--- a/LinearRegression1.ipynb
+++ b/LinearRegression1.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNu+l544GVa+myOkLSOUgt+",
+      "authorship_tag": "ABX9TyMy9R74zc3pwrD3bm0qcrtw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -210,8 +210,11 @@
         "id": "sw2BI2LyacmR"
       },
       "source": [
+        "#assign x two values,-3 and 3\n",
         "x_vals = (-3,3)\n",
+        "#use the x_values to calc the y_valyes\n",
         "y_vals = reg.intercept_ + reg.coef_ * x_vals\n",
+        "#plot the line using the x and y values\n",
         "plt.plot(x_vals, y_vals, color='red')\n",
         "plt.scatter(X_test[:,0],y_test, color='blue')\n",
         "plt.show()"
