--- a/LinearRegression2.ipynb
+++ b/LinearRegression2.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression2.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOZ7OfPoDOPyhkJ76OgkvCH",
+      "authorship_tag": "ABX9TyPz4tk/1FFD+vlpiaNEjPZ5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,6 +44,7 @@
         "import matplotlib.pyplot as plt\n",
         "from sklearn.linear_model import LinearRegression\n",
         "from sklearn import datasets, linear_model\n",
+        "from sklearn.datasets import load_diabetes \n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import mean_squared_error, r2_score"
       ],
@@ -103,7 +104,7 @@
         "diabetes_X, diabetes_y = datasets.load_diabetes(return_X_y=True)\n",
         "\n",
         "# Use only one feature\n",
-        "diabetes_X = diabetes_X[:, np.newaxis, 1]\n",
+        "diabetes_X = diabetes_X[:, np.newaxis, 2]\n",
         "\n",
         "#split into train and test datasets\n",
         "X_train, X_test, y_train, y_test = train_test_split(diabetes_X, diabetes_y, test_size=0.2, random_state=0)\n",
@@ -121,6 +122,17 @@
         "print(diabetes_X.shape)\n",
         "print(X_train.shape)\n",
         "print(X_test.shape)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XjyYN0Uv9flh"
+      },
+      "source": [
+        "print(y_train)"
       ],
       "execution_count": null,
       "outputs": []
@@ -213,8 +225,8 @@
       },
       "source": [
         "# Plot outputs\n",
-        "plt.scatter(diabetes_X_test, diabetes_y_test,  color='black')\n",
-        "plt.plot(diabetes_X_test, diabetes_y_pred, color='blue', linewidth=3)\n",
+        "plt.scatter(X_test, y_test,  color='black')\n",
+        "plt.plot(X_test, y_pred, color='blue', linewidth=3)\n",
         "\n",
         "plt.xticks(())\n",
         "plt.yticks(())\n",
