--- a/LinearRegression2.ipynb
+++ b/LinearRegression2.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression2.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPz4tk/1FFD+vlpiaNEjPZ5",
+      "authorship_tag": "ABX9TyNCkh4hIQobceUHuIDhFIks",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,7 +104,7 @@
         "diabetes_X, diabetes_y = datasets.load_diabetes(return_X_y=True)\n",
         "\n",
         "# Use only one feature\n",
-        "diabetes_X = diabetes_X[:, np.newaxis, 2]\n",
+        "#diabetes_X = diabetes_X[:, np.newaxis, 2]\n",
         "\n",
         "#split into train and test datasets\n",
         "X_train, X_test, y_train, y_test = train_test_split(diabetes_X, diabetes_y, test_size=0.2, random_state=0)\n",
@@ -210,6 +210,18 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qgbeFXOCvUY4"
+      },
+      "source": [
+        "print(regr.coef_[0])\n",
+        "print(X_test[0][0])"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "1t7CaPtFILSs"
@@ -225,12 +237,11 @@
       },
       "source": [
         "# Plot outputs\n",
-        "plt.scatter(X_test, y_test,  color='black')\n",
-        "plt.plot(X_test, y_pred, color='blue', linewidth=3)\n",
-        "\n",
-        "plt.xticks(())\n",
-        "plt.yticks(())\n",
-        "\n",
+        "plt.plot(X_test[:][0],regr.intercept_ + regr.coef_[0]*X_test[0], color='red')\n",
+        "plt.scatter(X_test[:,0],y_test, color='blue')\n",
+        "plt.xticks()\n",
+        "plt.xlabel(\"X_test\")\n",
+        "plt.ylabel(\"y_test\")\n",
         "plt.show()"
       ],
       "execution_count": null,
