--- a/LinearRegression2.ipynb
+++ b/LinearRegression2.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression2.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNCkh4hIQobceUHuIDhFIks",
+      "authorship_tag": "ABX9TyNxjoKBf3NV7K4yJ6A/lnly",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -103,8 +103,8 @@
         "# Load the diabetes dataset\n",
         "diabetes_X, diabetes_y = datasets.load_diabetes(return_X_y=True)\n",
         "\n",
-        "# Use only one feature\n",
-        "#diabetes_X = diabetes_X[:, np.newaxis, 2]\n",
+        "# Use only one feature - in the case 'age'\n",
+        "diabetes_X = diabetes_X[:, np.newaxis, 0]\n",
         "\n",
         "#split into train and test datasets\n",
         "X_train, X_test, y_train, y_test = train_test_split(diabetes_X, diabetes_y, test_size=0.2, random_state=0)\n",
@@ -192,6 +192,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "x8rT0XfkCtBm"
+      },
+      "source": [
+        "**Get the slope and y-intercept**<br>\n",
+        "The slope and y-intercept for diabetes and age<br>\n",
+        "As you can see, our model is not very accurate"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "pPXNcgLtP04d"
@@ -228,6 +239,57 @@
       },
       "source": [
         "**Plot the line and the test data**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nhpP-8hiCPBR"
+      },
+      "source": [
+        "# Plot outputs\n",
+        "plt.plot(X_test,y_pred, color='red')\n",
+        "plt.scatter(X_test[:,0],y_test, color='blue')\n",
+        "plt.xticks()\n",
+        "plt.xlabel(\"X_test\")\n",
+        "plt.ylabel(\"y_test\")\n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gruunEHBDOrS"
+      },
+      "source": [
+        "**Assignment 1**<br>\n",
+        "1. Pick a different feature\n",
+        "2. Train the model\n",
+        "3. Plot the line and the model"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lI5GBVmNDbFG"
+      },
+      "source": [
+        "**Assignment 2**<br>\n",
+        "Use all the features for a multiple linear regression<br>\n",
+        "1. Comment out the line where you select a feature<br>\n",
+        "2. Notice what happens to the coefficients <br>\n",
+        "3. Use the plot function below to plot"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nDX9X56yClKD"
+      },
+      "source": [
+        "**Plot when using all the features**"
       ]
     },
     {
